# ai_agent_with_langchain

./: .gitignore  main.py  pyproject.toml
app/bailian/: bailian.py  bailian_agent.py  bailian_output_parser.py  bailian_prompt.py  bailian_python_perl.py  bailian_qwq.py  bailian_tools.py  common.py
app/code_agent/agent/: agent_chat.py  code_agent.py  model_chat.py
app/code_agent/mcp/: __init__.py  browser_tools.py  shell_tools.py  terminal_tools.py
app/code_agent/model/: qwen.py
app/code_agent/prompts/: multi_chat_prompts.py
app/code_agent/rag/: rag.py  terminal.txt
app/code_agent/tools/: browser_tools.py  file_saver.py  file_tools.py  rag_tools.py  shell_tools.py  terminal_tools.py
app/code_agent/utils/: mcp.py
app/mcp/amap/: amap_mcp_client.py  amap_mcp_config.py
app/mcp/common/: llm.py
app/mcp/stdio/: mcp_playwright_client.py  mcp_stdio_client.py  mcp_stdio_server.py
